[package]
name = "mini-jam-intermission"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
dev = ["bevy/dynamic"]

[dependencies]
bevy = "0.9"
console_error_panic_hook = "0.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
