[package]
name = "mini-jam-intermission"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
dev = ["bevy/dynamic"]

[dependencies]
bevy = "0.9"
console_error_panic_hook = "0.1"
bevy_asset_loader = "0.14"
bevy_common_assets = { version = "0.4", features= [ "json", "yaml"]}
serde = "*"
serde_json = "*"
tracery = { version = "0.2", features = ["tracery_json"] }
bevy_turborand = { version = "*", features = ["rand"] }
bevy_egui = "*"
smooth-bevy-cameras = "*"
bevy-inspector-egui = "*"
bevy-sequential-actions = "0.6.0"
bevy_mod_picking = "0.11.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
